# local-medical-report-assistant

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
data/knowledge/: common_labs.md  nutrition_guidance.md  safety_red_flags.md
data/knowledge/medlineplus/: albumin-blood-test.md  alkaline-phosphatase.md  amylase-test.md  basic-metabolic-panel-bmp.md  bilirubin-blood-test.md  blood-glucose-test.md  c-reactive-protein-crp-test.md  calcium-blood-test.md  chloride-blood-test.md  cholesterol-levels.md  complete-blood-count-cbc.md  comprehensive-metabolic-panel-cmp.md  creatine-kinase.md  creatinine-test.md  d-dimer-test.md  electrolyte-panel.md  ferritin-blood-test.md  gamma-glutamyl-transferase-ggt-test.md  glucose-in-urine-test.md  hematocrit-test.md  hemoglobin-test.md  iron-tests.md  lactate-dehydrogenase-ldh-test.md  lipase-tests.md  liver-function-tests.md  magnesium-blood-test.md  osmolality-tests.md  partial-thromboplastin-time-ptt-test.md  platelet-tests.md  potassium-blood-test.md  prothrombin-time-test-and-inr-ptinr.md  reticulocyte-count.md  sodium-blood-test.md  thyroid-antibodies.md  total-protein-and-albumin-globulin-a-g-ratio.md  troponin-test.md  uric-acid-test.md  vitamin-b-test.md  vitamin-d-test.md  (+1 more)
scripts/: prepare_medlineplus_knowledge.py  prepare_vector_db.py  prune_medlineplus_knowledge.py
src/: __init__.py  config.py  models.py
src/agents/: __init__.py  graph.py  prompts.py
src/ingestion/: __init__.py  extractor.py  parser.py
src/retrieval/: __init__.py  vector_store.py
src/rules/: __init__.py  flag_engine.py
